@@ -1,3 +1,7 @@
+2010-11-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Improved wording of installation check screen, resolves #10162
+
 2010-10-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added data setter method to Data Filter interface, resolves #10059
